- added possibility to change user roles in Users tab - fixed not visible present day in calendar

--- a/frontend_diving/src/components/pages/events/eventsStyles.css
+++ b/frontend_diving/src/components/pages/events/eventsStyles.css
@@ -58,7 +58,8 @@
 
 /* Ustaw kolory dla bieżącego dnia */
 .rbc-today {
-    background-color: transparent;
+    background-color: white;
+    opacity: 50%;
 }
 
 /* Ustawienia dla paska nawigacji */
